--- a/faq_consent_onboarding.qmd
+++ b/faq_consent_onboarding.qmd
@@ -1,4 +1,4 @@
-# Consent/Onboarding Session-Frequently Asked Questions
+# Consent/Onboarding Session-Frequently Asked Questions {#sec-faq_consent_onboarding}
 
 
 <center>(The purpose of this FAQ is to serve as a useful reference for study staff while they are Consenting/Onboarding participants. Study staff should feel free to add new questions as they are asked by participants)</center>
