--- a/Instruction_Rstudio.qmd
+++ b/Instruction_Rstudio.qmd
@@ -1,4 +1,4 @@
-# R Instructions   
+# R Instructions {#sec-r_instructions}   
 ## Update packages in R studio   
 There are two ways of updating the packages.
 1. Using code 
