--- a/first_payment_letter.qmd
+++ b/first_payment_letter.qmd
@@ -1,4 +1,4 @@
-# First Payment Letter
+# First Payment Letter {#sec-first_payment_letter}
 
 Note, to performm the mail merge from the focus blue uplod file, you must use the word document version of this letter which is saved at P:\\studydata\\risk2\\administration\\financial
 
