--- a/payment_w9_entry.qmd
+++ b/payment_w9_entry.qmd
@@ -3,7 +3,7 @@
 ## Steps to process a returned participant W-9 form
 
 * If the handwriting is not legible, please let Susan know. We will need to ask the participant to clarify their name/SSN/etc and hand-write corrections on the form.  
-* Open the spreadsheet at P:\studydata\risk2\administration\financial\participant_payment_logs\tax_info\w9.xlsx (Password in LastPass)
+* Open the spreadsheet at P:\\studydata\\risk2\\administration\\financial\\participant_payment_logs\\tax_info\\w9.xlsx (Password in LastPass)
 * Enter participants' subid, first and last name, and the last 4 of their SSN in the corresponding columns in the spreadsheet
 * Add "W9 received" on the person's Slack thread
 * File the W9 form in the bottom drawer of the blue cabinet in Room 192; in the appropriate year folder, alphabetical by last name
