--- a/ra_tasks.qmd
+++ b/ra_tasks.qmd
@@ -56,7 +56,10 @@ When your assigned tasks are complete, you can help by performing other tasks!
  * Check STAR DMs
  * Check discussion boards
 * Post participant questions in their threads along with planned response
-* Add issues to payment scratchpad/WOG
+* Add issues to payment scratchpad/WOG 
+  * Practice WOG link: <https://uwmadison.co1.qualtrics.com/jfe/form/SV_9Naz0NHjR2bTYaO?practice=true> 
+  * Real WOG link:
+<https://uwmadison.co1.qualtrics.com/jfe/form/SV_9Naz0NHjR2bTYaO>
 * Make sure to update participants' new number in Google Voice 
 * Respond to any participant messages
 
